UI, handle error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">DowloadFile</string>
+    <string name="title">Advanced Download Manager</string>
+    <string name="next_update">This operation will be updated soon!</string>
+    <string-array name="tab_titles">
+        <item>Exit</item>
+        <item>Other</item>
+        <item>URL</item>
+        <item>Add</item>
+        <item>Queue</item>
+        <item>Done</item>
+        <item>Menu</item>
+    </string-array>
 </resources>
