adjust UI, header tab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DowloadFile</string>
+    <string name="header_tab">Header</string>
     <string name="title">Advanced Download Manager</string>
     <string name="next_update">This operation will be updated soon!</string>
     <string name="paste">PASTE</string>
