--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
         <item>URL</item>
         <item>Add</item>
         <item>Queue</item>
-        <item>Done</item>
+        <item>Firebase</item>
         <item>Menu</item>
     </string-array>
 </resources>
