add count time download in local for a fouder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,8 @@
         <item>Exit</item>
         <item>Add</item>
         <item>Firebase retrieve</item>
+        <item>Download multiple</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
